--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h2 class="section-heading text-center">INTRODUCING MEL</h2>
                     <hr class="light">
                     <p class="text-faded text-center">
-                        During my teaching career I have proven my ability to inspire a broad range of students, instilling an appreciation for creativity and promoting ‘out-of-the-box’ thinking. I have maintained high standards of achievement, consistently setting the bar for excellence.
+                        During my teaching career I have proven my ability to inspire a broad range of students, instilling an appreciation for creativity and promoting ‘outside-of-the-box’ thinking. I have maintained high standards of achievement, consistently setting the bar for excellence.
                     </p>
                     
                     <h3 class="text-center handwritten">I am...</h3>
@@ -214,13 +214,38 @@
                     <h2>Professional Experience</h2>
                     <hr class="light">
                 </div>
-                    <div class="row timeline">
-                        <div class="col-sm-2 ex-aa" id="ex-aa"><p class="timeline-date">2006</p><br><p class="timeline-place">Saint Kentigern College</p></div>
-                        <div class="col-sm-2 ex-bb" id="ex-bb"><p class="timeline-date">2007</p><br><p class="timeline-place">Qatar International School</p></div>
-                        <div class="col-sm-2 ex-cc" id="ex-cc"><p class="timeline-date">2007</p><br><p class="timeline-place">Park House English School</p></div>
-                        <div class="col-sm-2 ex-dd" id="ex-dd"><p class="timeline-date">2012</p><br><p class="timeline-place">Inspiration Station</p></div>
-                        <div class="col-sm-2 ex-ee" id="ex-ee"><p class="timeline-date">2015</p><br><p class="timeline-place">Reserve Group</p></div>
-                        <div class="col-sm-2 ex-ff" id="ex-ff"><p class="timeline-date">2015</p><br><p class="timeline-place">Tauranga Girls' College</p></div>
+                    <div class="row timeline hidden-mobile">
+                        <div class="col-sm-2 ex-aa timeline-section" id="ex-aa">
+                            <div class="timeline-date">2006</div>
+                            <div class="timeline-bullet"></div>
+                            <div class="timeline-name">Saint Kentigern College</div>
+                            
+                        </div>
+                        <div class="col-sm-2 ex-bb timeline-section" id="ex-bb">
+                            <div class="timeline-bullet"></div>
+                            <div class="timeline-date">2007</div>
+                            <div class="timeline-name">Qatar International School</div>
+                        </div>
+                        <div class="col-sm-2 ex-cc timeline-section" id="ex-cc">
+                            <div class="timeline-date">2007</div>
+                            <div class="timeline-bullet"></div>
+                            <div class="timeline-name">Park House English School</div>                      
+                        </div>
+                        <div class="col-sm-2 ex-dd timeline-section" id="ex-dd">
+                            <div class="timeline-date">2012</div>
+                            <div class="timeline-name">Inspiration Station</div>
+                            <div class="timeline-bullet"></div>
+                        </div>
+                        <div class="col-sm-2 ex-ee timeline-section" id="ex-ee">
+                            <div class="timeline-date">2015</div>
+                            <div class="timeline-name">Reserve Group</div>
+                            <div class="timeline-bullet"></div>
+                        </div>
+                        <div class="col-sm-2 ex-ff timeline-section" id="ex-ff">
+                            <div class="timeline-date">2015</div>
+                            <div class="timeline-name">Tauranga Girls' College</div>
+                            <div class="timeline-bullet"></div>
+                        </div>
                     </div>
                     <p class="text-centre handwritten ex-years">12 years working experience</p>
         </aside>
