updates svg max-width

--- a/portfolio/portfolio/mobile/index.html
+++ b/portfolio/portfolio/mobile/index.html
@@ -274,7 +274,7 @@
 						</div> 
 
         
-        				<svg version="1.1" id="y" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        				<svg version="1.1" id="y" class="svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
         				viewBox="0 0 320 480" enable-background="new 0 0 320 480" xml:space="preserve">
             				<path opacity="0.5" fill="#A84F8E" d="M45.752,414.966l-0.008,1.63c0,7.316-6.055,13.246-13.37,13.246S19,423.916,19,416.6v-0.927
             				c0-2.499-1.99-4.519-4.49-4.519s-4.51,2.02-4.51,4.519v0.927c0,12.317,10.083,22.299,22.4,22.299c12.317,0,22.35-9.985,22.35-22.303
