--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
                     <h4 class="text-center">Key Skills</h2>
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-sm-6">
-                                <ul>
+                            
+                                <ul class="text-center">
                                     <li>Graphic Design - Create Assets for both web and print using Illustrator, Photoshop and InDesign.</li>
                                     <li>Branding - Develop unique brand identities with clear and comprehensive guidelines</li>
                                     <li>Web Development - Build exciting web designs using HTML, CSS3, Javascript and JQuery.</li>
                                     <li>SEO - Understand web analysis to implement strategies for optimising site performance.</li>
                                     <li>Illustration - Strength in creating unique and high quality illustrations for projects using both conventional drawing materials as well as digital techniques.</li>
                                 </ul>
-                            </div>
+                            
                         </div>    
                     </div>
                     <h3 class="text-center handwritten">I have...</h3>
