--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <li>I founded and managed my own business, a successful arts and crafts centre</li>
                             <li>I have proven, through my experience training in web development, that I am able to reinvent myself with confidence</li>
                         </ul>
-                    <a href="/MelEatonCV2017.pdf" class="page-scroll btn btn-default btn-xl sr-button download-btn" download>Download CV</a>
+                    <a href="/MelEatonCV2017a.pdf" class="page-scroll btn btn-default btn-xl sr-button download-btn" download>Download CV</a>
                 </div> 
             </div>
         </div>
