--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/test.html">test</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
