--- a/create.html
+++ b/create.html
@@ -72,11 +72,20 @@
 
     <!-- Header -->
     <header class="masthead bg-primary text-white">
-      <div class="prints container" id="printhover">
+      <!-- <div class="prints container" id="printhover">
             <img src="img/print2K.svg" id="printK" class="print printK img-responsive"alt="black finger print">
             <img src="img/print2C.svg" id="printC" class="print printC img-responsive"alt="cyan finger print">
             <img src="img/print2M.svg" id="printM" class="print printM img-responsive"alt="magenta finger print">
             <img src="img/print2Y.svg" id="printY" class="print printY img-responsive"alt="yellow finger print"></div>
+      </div> -->
+      <div class="prints container" id="printhover">
+            <img src="img/print2K.svg" id="printK" class="print printK img-responsive" alt="black finger print">
+            <img src="img/print2C.svg" id="printC" class="print printC img-responsive" alt="cyan finger print">
+            <img src="img/print2M.svg" id="printM" class="print printM img-responsive" alt="magenta finger print">
+            <img src="img/print2Y.svg" id="printY" class="print printY img-responsive" alt="yellow finger print">
+            <img src="img/print2C.svg" id="printC2" class="print printC2 img-responsive" alt="cyan finger print">
+            <img src="img/print2M.svg" id="printM2" class="print printM2 img-responsive" alt="magenta finger print">
+            <img src="img/print2Y.svg" id="printY2" class="print printY2 img-responsive" alt="yellow finger print">
       </div>
       <div class="container header-title">
           <h1 class="text-uppercase mb-0">CREATE</h1>
@@ -149,7 +158,7 @@
                             <li>I founded and managed my own business, a successful arts and crafts centre</li>
                             <li>I have proven, through my experience training in web development, that I am able to reinvent myself with confidence</li>
                         </ul>
-                    <a href="/MelEatonCV2018.pdf" class="btn btn-xl download-btn" download>Download CV</a>
+                    <a href="MelEatonCV2018_create.pdf" class="btn btn-xl download-btn" download>Download CV</a>
           </div>
         </div>
       </div>
