update all the things

--- a/educate.html
+++ b/educate.html
@@ -3,6 +3,17 @@
 
   <head>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86560234-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-86560234-3');
+</script>
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Mel Eaton Curriculum Vitea design portfolio">
@@ -90,7 +101,7 @@
             <h3 class="font-weight-light">Visual Art | Graphic & Web Design<br>Art History | Film & Photography</h3>
       </div>
       <div class="header-overlay"></div>
-      <a href="#about" class="btn js-scroll-trigger header-btn"><i class="fa fa-3x fa-angle-down text-primary" data-sr-id="2"></i></a>
+      <a href="#intro" class="btn js-scroll-trigger header-btn"><i class="fa fa-3x fa-angle-down text-primary" data-sr-id="2"></i></a>
     </header>
 
     <!-- About -->
@@ -230,6 +241,7 @@
           <h3 class="text-secondary mb-0">Employment History</h3>
           <h2 class="mb-5">Experience</h2>
         </div>
+        <p class="text-center faded">Click through to read more...</p>
         <div class="row no-gutters">
           <div class="col-lg-6">
             <a class="portfolio-item" href="#portfolio-modal-1">
@@ -314,7 +326,11 @@
             <h2 class="mb-5">RELEVANT EXPERIENCE</h2>
           <div class="row">
             <div class="col narrow">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quaerat vel  provident quia doloribus, a nesciunt numquam deserunt hic reiciendis error, quis alias blanditiis est  consectetur quas totam facere minus?</p>
+              <p class="text-center text-secondary text-emphasis">
+                        “Jack of all trades, master of none,<br>
+                        though oftentimes better than master of one.”
+                    </p>
+              <p class="lead"></p>
             </div>
             <div class="row">
               <div class="col narrow text-left">
@@ -331,19 +347,26 @@
     <!-- About -->
     <section class="container mb-0" id="about">
         <div class="container content-section-heading text-center ">
-          <h3 class="text-secondary mb-0">Something</h3>
-            <h2 class="mb-5">About</h2>
+          <h3 class="text-secondary mb-0">Get To Know Me</h3>
+            <h2 class="mb-5">About Mel</h2>
           <div class="row">
-            <div class="col narrow">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quaerat vel  provident quia doloribus, a nesciunt numquam deserunt hic reiciendis error, quis alias blanditiis est  consectetur quas totam facere minus?</p>
-            </div>
-            <div class="row">
-              <div class="col narrow text-left">
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
+            <div class="col narrow text-left">
+              <h4 class="text-center">Teaching Philosophy</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla doloremque, aspernatur alias sed recusandae, voluptatibus sit optio tempora tempore accusamus, eius perferendis harum fugit! Quas placeat sapiente culpa distinctio expedita.</p>
+              <p>
+              I am passionate about creativity in all of its shapes and forms. Most of all I am passionate about fostering creativity in others. I love teaching and sharing ideas and feel privileged to have been able to do so much of what I love in my career so far.
+              </p>
+              <h4 class="text-center">About Me</h4>
+              <div class="profile d-sm-none d-md-none d-lg-block">
+                <img src="img/self.jpg" class="img-fluid" alt="">
+                <span class="caption faded">D.O.B - 22/10/1982</span>
               </div>
+              <p>I have lived in and travelled to many places across the globe, but New Zealand is the place I call home.  I was born in Scotland and briefly lived in the Caribbean whilst immigrating to New Zealand where my family settled in 1995. My accent battles with dual nationality and I am often mistaken for Canadian, which makes for an interesting conversation point. On top of that I benefited from being part of an expatriate community in Qatar, Middle East, for close to eight years.
+              </p>
+              <p>
+              I believe my international experience contributes to my friendly, outgoing, and ambitious personality. I enjoy a challenge and seize every opportunity that crosses my path. The melting pot of experiences and influences I have enjoyed has also impacted my artistic interests. My eclectic tastes, from the masters of Art History to trends in pop culture, Indie Rock to Classical Opera, from fine arts to handmade crafts are all shaped by my intrepid exploration of new horizons.
+              </p>
+              <p>I have been thoroughly enjoying exploring the new horizons of beautiful Canterbury, my home now since September 2017, with my family - partner Tim, our one year old little boy called Fox and stepkids William, Josh and Penny.  </p>
             </div>
           </div>
         </div>
@@ -356,15 +379,13 @@
             <h2 class="mb-5">GOALS</h2>
           <div class="row">
             <div class="col narrow">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quaerat vel  provident quia doloribus, a nesciunt numquam deserunt hic reiciendis error, quis alias blanditiis est  consectetur quas totam facere minus?</p>
             </div>
-            <div class="row">
-              <div class="col narrow text-left">
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi perferendis assumenda molestias alias   eius architecto quo, laudantium iste.</li>
-              </div>
+            <div class="row narrow text-left">
+              <p>I believe it is not what you do in life but how you do it that is important. Artistic creation requires a unique way of working and thinking. I hope to open and expose students, from all playing fields, to the diversity of creative expression to be found in any arena of imagination.
+              </p>
+              <p> 
+              My goal is to encourage innovative thinking and an awareness of learning through creative investigation — to provide students with the information, resources, and encouragement to ask the right questions, chase the inspiration, and come up with the big ideas. I want to develop and encourage the importance of creative thought that can then be turned into inspired action.
+              </p>
             </div>
           </div>
         </div>
@@ -480,7 +501,7 @@
                   </div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col"><img src="img/portfolio/FMPtime.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt="">
+                  <div class="col"><img src="img/portfolio/FMPtime.JPG" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt="">
                     </div>
                   <div class="col"><img src="img/portfolio/FMPdolly.png" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
                 </div>
