--- a/create.html
+++ b/create.html
@@ -3,6 +3,17 @@
 
   <head>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86560234-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-86560234-3');
+</script>
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Mel Eaton Curriculum Vitea design portfolio">
@@ -93,11 +104,11 @@
             <h3 class="font-weight-light">Web Development | Graphic Design | Painting<br>Illustration | Textiles | Animation</h3>
       </div>
       <div class="header-overlay"></div>
-      <a href="#about" class="btn js-scroll-trigger header-btn"><i class="fa fa-3x fa-angle-down text-primary" data-sr-id="2"></i></a>
+      <a href="#intro" class="btn js-scroll-trigger header-btn"><i class="fa fa-3x fa-angle-down text-primary" data-sr-id="2"></i></a>
     </header>
 
     <!-- About -->
-    <section class="content-section" id="about">
+    <section class="content-section" id="intro">
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto content-section-heading text-center">
