update everything again

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h6 class="slide__tagline">
 							Unique Art and Design Solutions
 							</br>
-							<a href="create.html"><span class="read_more">read more</span></a>
+							<a href="wip.html"><span class="read_more">read more</span></a>
 							</h6>
 						</div>
 					</div>
