--- a/wip.html
+++ b/wip.html
@@ -39,6 +39,15 @@
     	color: #ffc708;
     }
 
+    .download-btn {
+        min-width: 300px;
+        min-height: 95px;
+    }
+
+    .special {
+        line-height: 3;
+    }
+
     @media (max-width: 700px) {
   .white-overlay {
     width: 80%;
@@ -50,10 +59,14 @@
 <body class="cyanBG">
 	<div class="white-overlay">
 		<div class="text-container">
-				<h1 class="text-uppercase mb-0 text-secondary">Work In Progress</h1>
-            <h2 class="font-weight-light mb-0">Check again soon!</h2>
-            <h3 class="font-weight-light">Visit this page for details about Mel's experience with Art and Design</h3>
-            <a href="index.html" class="btn btn-xl download-btn">Back to Homepage</a>
+				<h1 class="text-uppercase mb-0 text-secondary">COMING SOON...</h1>
+            <h2 class="font-weight-light mb-0">Sorry, work in progress!</h2>
+            <h3 class="font-weight-light">Visit this page again soon for details about Mel's experience with Art and Design</h3>
+            <div class="buttons-container">
+                <div><a href="index.html" class="btn btn-xl download-btn special">BACK TO HOMEPAGE</a></div>
+                <div><a href="educate.html" class="btn btn-xl download-btn">OR READ ABOUT<br>TEACHING EXPERIENCE</a></div>
+            </div>
+            
 		</div>
 	</div>
 	
