fix create link on mobile

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</a>	
 							</div>
 							<div class="page_links_contain">
-							<a href="create.html">	
+							<a href="wip.html">	
 								<h4 class="create">CREATE</h4>
 								<h6 class="">
 								Unique Art and Design Solutions
