fix hidden images on mobile

--- a/educate.html
+++ b/educate.html
@@ -632,16 +632,16 @@
                   </div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col"><img src="img/portfolio/sewing.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt="">
+                  <div class="col"><img src="img/portfolio/sewing.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt="">
                     </div>
-                  <div class="col"><img src="img/portfolio/cozy.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
+                  <div class="col"><img src="img/portfolio/cozy.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
                 </div>
                 <div class="row">
                   <div class="col">
                     <h4 class="mb-1">My role as manager included:</h4>
                       <p>
                         <ul class="mb-5 text-left">
-                          <img class="img-fluid float-right quarter" src="img/portfolio/mel-pic.jpg" alt="">
+                          <img class="img-fluid float-right quarter d-none d-sm-none d-md-none d-lg-block" src="img/portfolio/mel-pic.jpg" alt="">
                           <li><span class="bold text-secondary">Design and creation of space</span> – I was in charge of designing the allocation of space as well as furnishing to create a functional and creative facility.</li>
                           <li><span class="bold text-secondary">Marketing</span> – I employed targeted marketing (such as developing contacts with newspapers and magazines, promoting with local schools and community groups and networking and marketing online) as well as creating a distinct brand identity.</li>
                           <li><span class="bold text-secondary">Graphic designer</span> – I extended my graphic skills and familiarity with Adobe software when creating all of our branding and promotion material.</li>
@@ -658,19 +658,19 @@
                     </div>
                   </div>
                   <div class="row mb-5">
-                  <div class="col"><img src="img/portfolio/strip-tumble.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt="">
+                  <div class="col"><img src="img/portfolio/strip-tumble.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt="">
                     </div>
-                  <div class="col"><img src="img/portfolio/silk-painting.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
+                  <div class="col"><img src="img/portfolio/silk-painting.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
                 </div>
                 <div class="row mb-5">
-                  <div class="col"><img src="img/portfolio/staff.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt="">
+                  <div class="col"><img src="img/portfolio/staff.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt="">
                     </div>
-                  <div class="col"><img src="img/portfolio/timeout.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
+                  <div class="col"><img src="img/portfolio/timeout.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
                 </div>
                 <div class="row">
                   <div class="col">
                       <h4 class="mb-1">Building a Community</h4>
-                      <img src="img/portfolio/qatart.jpg" class="d-sm-none d-md-none d-lg-block half float-right"alt="">
+                      <img src="img/portfolio/qatart.jpg" class="d-none d-sm-none d-md-none d-lg-block half float-right"alt="">
                       <p class="mb-5 text-left">
                       As manager of Inspiration Station I was also involved in developing a handmade community group called QatART. As a committee board member I was charged with various responsibilities such as administrating the groups finances, organising events, generating publicity material and liaising with members.
                       </p>
@@ -719,7 +719,7 @@
                     <h4>Key responsibilities included:</h4> 
                     <p>
                     <ul>
-                      <img class="img-fluid mb-5 float-right half d-sm-none d-md-none d-lg-block" src="img/portfolio/phes3.jpg" alt="">
+                      <img class="img-fluid mb-5 float-right half d-none d-sm-none d-md-none d-lg-block" src="img/portfolio/phes3.jpg" alt="">
                       <li><span class="bold text-secondary">Curriculum development</span> – Created dynamic schemes of work and lesson plans for the department that could cater to students from years 7-13.</li>
                       <li><span class="bold text-secondary">Leadership</span> – Provided valued support, guidance and training to staff within the department as well as acting as disciplinary and subject leader to students.</li>
                       <li><span class="bold text-secondary">Budget holder</span> – Maintained budget for annual order, ‘big ticket’ items and general  department costs throughout the year. This task often required innovative resourcefulness  as materials were often not available in Qatar and substitutes would need to be found.</li>
@@ -734,9 +734,9 @@
                     </div>
                   </div>
                   <div class="row mb-5">
-                  <div class="col"><img src="img/portfolio/phes1.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt="">
+                  <div class="col"><img src="img/portfolio/phes1.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt="">
                     </div>
-                  <div class="col"><img src="img/portfolio/phes2.jpg" class="d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
+                  <div class="col"><img src="img/portfolio/phes2.jpg" class="d-none d-sm-none d-md-none d-lg-block img-fluid"alt=""></div>
                 </div>
                 <div class="row mb-5">
                   <div class="col">
