fix missing photo TGC YISFF

--- a/educate.html
+++ b/educate.html
@@ -521,7 +521,7 @@
                 <div class="row">
                   <div class="col">
                       <h4 class="mb-1">Film and Media Production</h4>
-                      <img src="img/portfolio/YISFF.jpg" class="d-none d-sm-none d-md-none d-lg-block third float-right"alt="">
+                      <img src="img/portfolio/YISFF.JPG" class="d-none d-sm-none d-md-none d-lg-block third float-right"alt="">
                       <p class="mb-5 text-left">
                       In this subject students produced video work for a range of purposes and contexts - promotional videos for the school, short films and video art installation inspired by artists like Bill Viola and Tony Oursler. The aim of the course is to develop both technical skills - such as camera control, editing skills, sound engineering and lighting, as well as scripting, storyboarding and planning/managing a production project - and conceptual understanding of film by looking at a wide variety of artist models and examples.<br>I introduced the Youth International Silent Film Festival competition to my classes and was very proud to see not only 3 groups rank in the top 10 but two of our girls win second place in the 2016 competition. They were invited to the International festival in Portland and visited America for the festival and workshops in June, 2017. Since then one of these girls has gone onto take first place in the 2017 competition.
                       </p>
