add animation section

--- a/educate.html
+++ b/educate.html
@@ -332,8 +332,8 @@
                     </p>
               <p class="lead"></p>
             </div> -->
-            <div class="row">
-              <div class="col text-left mb-3">
+          <div class="row">
+            <div class="col text-left mb-3">
               <img src="img/TGCmag.jpg" class="img-fluid float-right quarter d-none d-sm-none d-md-none d-lg-block" alt="">
               <ul>
               <li><span class="bold text-secondary">Publishing and Graphic Design </span>- My familiarity with Photoshop, Illustrator, InDesign and web development has gained me the role of resident Graphic Designer in the schools I have taught in, the groups I have been part of and the business I managed. At PHES I established the school's annual yearbook and published five issues. I also helped with the production of TGC's 2016 school magazine. Yearbook production has involved managing staff submitting content, producing page layouts and coordinating with printers and sponsors.
@@ -363,11 +363,24 @@
           <div class="row">
               <div class="col d-none d-sm-none d-md-none d-lg-block">
               <img src="img/textiles.jpg" class="img-fluid" alt="">
-            </div>
-              <div class="col text-left"><ul><li><span class="bold text-secondary">Textiles </span>- I have always had a keen interest in textiles, sewing and fabric based projects, which peaked during my time managing and developing Inspiration Station. I have recently been working on building a new project and 'The Melon Seed', a textile design brand for young families, is beginning to germinate. This project has been inspired by my son and partner.</li></ul></div>
               </div>
-            </div>
+              <div class="col text-left">
+                <ul>
+                  <li><span class="bold text-secondary">Textiles </span>- I have always had a keen interest in textiles, sewing and fabric based projects, which peaked during my time managing and developing Inspiration Station. I have recently been working on building a new project and 'The Melon Seed', a textile design brand for young families, is beginning to germinate. This project has been inspired by my son and partner.</li>
+                </ul>
+              </div>
           </div>
+          <div class="row">
+              <div class="col text-left">
+                <ul>
+                  <li><span class="bold text-secondary">Animation </span>- When I left highschool I was planning to either become an art teacher or an animator. Obviously I took the path towards education but I have always enjoyed learning about different animation techniques and have tried to bring animation and moving image into my teaching where I can.</li>
+                </ul>
+              </div>
+              <div class="col d-none d-sm-none d-md-none d-lg-block">
+              <img src="img/rotoscope.gif" class="img-fluid" alt="">
+              </div>
+          </div>
+        </div>
         </div>
     </section>
 
