--- a/educate.html
+++ b/educate.html
@@ -356,7 +356,7 @@
               <div class="col">
                 <ul>
                   <li><span class="bold text-secondary">Painting </span>- I have a love for so many art processes and techniques but painting is something I enjoy most. With brush in hand I feel at peace and use painting like a form of meditation. This is one of the things I appreciate most about the arts.</li>
-                  <li><span class="bold text-secondary">Illustration </span>- I enjoy creating illustrations for different projects and hope to have more of my work published. I have worked with children's book writers to create <a href="TheColonel_IlloSub.pdf" class="text-secondary faded" download>illustrated submissions</a> and enjoy the collaborative process of brining words to life with drawing.</li>
+                  <li><span class="bold text-secondary">Illustration </span>- I enjoy creating illustrations for different projects and hope to have more of my work published. I have worked with children's book writers to create <a href="TheColonel_IlloSub.pdf" class="text-secondary faded" download>illustrated submissions</a> and enjoy the collaborative process of bringing words to life with drawing.</li>
                 </ul>
               </div>
           </div>
