--- a/educate.html
+++ b/educate.html
@@ -408,7 +408,7 @@
               <p>
               I believe my international experience contributes to my friendly, outgoing, and ambitious personality. I enjoy a challenge and seize every opportunity that crosses my path. The melting pot of experiences and influences I have enjoyed has also impacted my artistic interests. My eclectic tastes, from the masters of Art History to trends in pop culture, Indie Rock to Classical Opera, from fine arts to handmade crafts are all shaped by my intrepid exploration of new horizons.
               </p>
-              <p>I have been thoroughly enjoying exploring the new horizons of beautiful Canterbury, my home now since September 2017, with my family - partner Tim, our one year old little boy called Fox and stepkids William, Josh and Penny.  </p>
+              <p>I have been thoroughly enjoying exploring the new horizons of beautiful Canterbury, my home now since September 2017, with my family - partner Tim, our two year old little boy called Fox and stepkids William, Josh and Penny.  </p>
             </div>
           </div>
         </div>
