--- a/index.html
+++ b/index.html
@@ -69,19 +69,11 @@
 						</div>
 				</div>
 				<div class="headings-right">
-					<div class="page_links">
-						<!-- <div class="page_links_top">
+					<div class="page_links">	
+						<a href="educate.html"><div class="page_links_bottom">
+							<h4 class="slide__subtitle">Educate</h4>
 							<h6 class="slide__tagline">
-							<a href="educate.html"><span class="read_more">read more</span></a>
-							</br>
 							Teaching and Training Experience
-							</h6>
-							<h4 class="slide__subtitle">EDUCATE</h4>	
-						</div> -->	
-						<a href="wip.html"><div class="page_links_bottom">
-							<h4 class="slide__subtitle">CREATE</h4>
-							<h6 class="slide__tagline">
-							Unique Art and Design Solutions
 							</br>
 							<span class="read_more">read more</span>
 							</h6>
@@ -111,16 +103,6 @@
 								</br>
 								<span class="read_more">read more</span>
 								</h6>	
-							</a>	
-							</div>
-							<div class="page_links_contain">
-							<a href="create.html">	
-								<h4 class="create">CREATE</h4>
-								<h6 class="">
-								Unique Art and Design Solutions
-								</br>
-								<span class="read_more">read more</span>
-								</h6>
 							</a>	
 							</div>
 						</div>
