--- a/educate.html
+++ b/educate.html
@@ -91,9 +91,9 @@
             <img src="img/print2C.svg" id="printC" class="print printC img-responsive" alt="cyan finger print">
             <img src="img/print2M.svg" id="printM" class="print printM img-responsive" alt="magenta finger print">
             <img src="img/print2Y.svg" id="printY" class="print printY img-responsive" alt="yellow finger print">
-            <img src="img/print2C.svg" id="printC2" class="print printC2 img-responsive" alt="cyan finger print">
+            <!-- <img src="img/print2C.svg" id="printC2" class="print printC2 img-responsive" alt="cyan finger print">
             <img src="img/print2M.svg" id="printM2" class="print printM2 img-responsive" alt="magenta finger print">
-            <img src="img/print2Y.svg" id="printY2" class="print printY2 img-responsive" alt="yellow finger print"></div>
+            <img src="img/print2Y.svg" id="printY2" class="print printY2 img-responsive" alt="yellow finger print"> --></div>
       </div>
       <div class="container header-title">
           <h1 class="text-uppercase mb-0">EDUCATE</h1>
@@ -180,7 +180,7 @@
                             <li>My training in web development and work as a Digital Producer has proven that I am able to reinvent myself with confidence and continue to build on my skill base</li>
                             <li>In my first year of teaching Film and Media I introduced my students to the Youth International Silent Film Festival. One of my groups took second place and two other groups ranked in the top 10.</li>
                         </ul>
-                    <a href="MelEatonCV2018_educate.pdf" class="btn btn-xl download-btn" download>Download CV</a>
+                    <a href="MelEatonCV2019_educate.pdf" class="btn btn-xl download-btn" download>Download CV</a>
           </div>
         </div>
       </div>
@@ -366,14 +366,14 @@
               </div>
               <div class="col text-left">
                 <ul>
-                  <li><span class="bold text-secondary">Textiles </span>- I have always had a keen interest in textiles, sewing and fabric based projects, which peaked during my time managing and developing Inspiration Station. I have recently been working on building a new project and 'The Melon Seed', a textile design brand for young families, is beginning to germinate. This project has been inspired by my son and partner.</li>
+                  <li><span class="bold text-secondary">Textiles </span>- I have always had a keen interest in textiles, sewing and fabric based projects, which peaked during my time managing and developing Inspiration Station, an Art, Craft and Sewing center. I have recently enjoyed working on a new project that builds on this interest and 'The Melon Seed', a design brand for young families, is beginning to germinate. This project has been inspired by my young son and my partner.</li>
                 </ul>
               </div>
           </div>
           <div class="row">
               <div class="col text-left">
                 <ul>
-                  <li><span class="bold text-secondary">Animation </span>- When I left highschool I was planning to either become an art teacher or an animator. Obviously I took the path towards education but I have always enjoyed learning about different animation techniques and have tried to bring animation and moving image into my teaching where I can.</li>
+                  <li><span class="bold text-secondary">Animation </span>- When I left highschool I was planning to either become an art teacher or an animator. Obviously, I took the path towards education but I have always enjoyed learning about different animation techniques and have tried to bring animation and moving image into my teaching where I can.</li>
                 </ul>
               </div>
               <div class="col d-none d-sm-none d-md-none d-lg-block">
@@ -470,8 +470,8 @@
             </ul>
           </div>
           <div class="col-lg-4">
-            <h4 class="text-uppercase mb-4">MEL CAN CREATE</h4>
-            <p class="lead mb-0">Read more about Mel's <br><a href="wip.html">art & design experience
+            <h4 class="text-uppercase mb-4">MEL CREATES</h4>
+            <p class="lead mb-0">Follow Mel's creations<br><a href="http://www.instagram.com/mel.eaton.designs" target="_blank">Instagram @mel.eaton.designs
               </a></p>
           </div>
         </div>
