--- a/educate.html
+++ b/educate.html
@@ -73,9 +73,9 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
+            <!-- <li class="nav-item mx-0 mx-lg-1">
               <a class="highlightY nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="wip.html">CREATE</a>
-            </li>
+            </li> -->
             <li class="nav-item mx-0 mx-lg-1 home-button">
               <a class="highlightC nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html"><i class="fas fa-home"></i></a>
             </li>
