--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <!-- <li class="nav-item mx-0 mx-lg-1">
               <a class="highlightY nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="wip.html">CREATE</a>
             </li> -->
-            <li class="nav-item mx-0 mx-lg-1 home-button">
+            <!-- <li class="nav-item mx-0 mx-lg-1 home-button">
               <a class="highlightC nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html"><i class="fas fa-home"></i></a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -109,7 +109,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="container header-title">
           <h1 class="text-uppercase mb-0">EDUCATE</h1>
-            <h2 class="font-weight-light mb-0">Teaching and Training Experience</h2>
+            <h2 class="font-weight-light mb-0">Resume of Teaching Experience</h2>
             <h3 class="font-weight-light">Visual Art | Graphic & Web Design<br>Art History | Film & Photography</h3>
       </div>
       <div class="header-overlay"></div>
@@ -420,7 +420,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p>
               I believe my international experience contributes to my friendly, outgoing, and ambitious personality. I enjoy a challenge and seize every opportunity that crosses my path. The melting pot of experiences and influences I have enjoyed has also impacted my artistic interests. My eclectic tastes, from the masters of Art History to trends in pop culture, Indie Rock to Classical Opera, from fine arts to handmade crafts are all shaped by my intrepid exploration of new horizons.
               </p>
-              <p>I have been thoroughly enjoying exploring the new horizons of beautiful Canterbury, my home now since September 2017, with my family - partner Tim, our two year old little boy called Fox and stepkids William, Josh and Penny.  </p>
+              <p>I have been thoroughly enjoying exploring the new horizons of beautiful Canterbury, my home now since September 2017, with my family - partner Tim, our nearly three year old little boy called Fox and stepkids William, Josh and Penny.  </p>
             </div>
           </div>
         </div>
