--- a/whoswho.html
+++ b/whoswho.html
@@ -69,7 +69,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="../img/BGY.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/bgY.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -97,7 +97,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="../img/BGC.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/bgC.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6">
@@ -116,7 +116,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="../img/BGM.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="img/bgM.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
