--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <h2></h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/handheart.jpeg" alt="">
+              <img class="img-fluid" src="img/1.jpeg" alt="">
             </a>
           </div>
 
@@ -274,7 +274,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <h2></h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/graphic3.jpg" alt="">
+              <img class="img-fluid" src="img/2.jpg" alt="">
             </a>
           </div>
 
@@ -287,7 +287,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <h2></h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/kids.jpg" alt="">
+              <img class="img-fluid" src="img/3.jpg" alt="">
             </a>
           </div>
 
@@ -300,7 +300,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <h2></h2>
                 </span>
               </span>
-              <img class="img-fluid" src="img/paint.jpg" alt="">
+              <img class="img-fluid" src="img/4.jpg" alt="">
             </a>
           </div>
 
